--- a/pfc_v1/default/inputs.conf
+++ b/pfc_v1/default/inputs.conf
@@ -1,3 +1,10 @@
+[monitor:///opt/splunk/etc/apps/pfc/downloads/full/diag*/etc/system/local/server.conf]
+index=pfc
+crcSalt = <SOURCE>
+sourcetype=local_server_conf
+host_segment = 8
+blacklist = (\.gz$|\.tgz$)
+
 [monitor:///opt/splunk/etc/apps/pfc/downloads/full/diag*/log/audit.log*]
 index=pfc
 sourcetype=audit_log
