--- a/pfc_v1/default/props.conf
+++ b/pfc_v1/default/props.conf
@@ -1,3 +1,14 @@
+[host::diag*]
+EXTRACT-hostshortname=\w+-(?<host_short_name>.{1,45})-20\d{2} in host
+
+[local_server_conf]
+DATETIME_CONFIG=CURRENT
+SHOULD_LINEMERGE=true
+LINE_BREAKER=^\[\w+\W
+NO_BINARY_CHECK=true
+CHARSET=UTF-8
+BREAK_ONLY_BEFORE=^\[\w
+
 [peers_csv]
 BREAK_ONLY_BEFORE_DATE = 
 DATETIME_CONFIG = CURRENT
@@ -14,11 +25,12 @@ pulldown_type = true
 
 [systeminfo_txt]
 DATETIME_CONFIG = CURRENT
-LINE_BREAKER = (\*{1,10}\s)\w+
+#LINE_BREAKER = (\*{1,10}\s)\w+
+LINE_BREAKER = ([\r|\n])
 MAX_TIMESTAMP_LOOKAHEAD = 
 NO_BINARY_CHECK = true
 SHOULD_LINEMERGE = false
-TRUNCATE = 0
+TRUNCATE = 1000
 category = Custom
 description = systeminfo_txt
 pulldown_type = true
@@ -32,4 +44,5 @@ LINE_BREAKER=(\d{1,2}-\d{1,2}-\d{1,4}\s\d{1,2}:\d{1,2}:\d{1,2}.\d+.INFO\s+dispat
 NO_BINARY_CHECK=true
 CHARSET=AUTO
 MUST_BREAK_AFTER=(ShutdownHandler\s-\sShutdown\scomplete)
-TRUNCATE=0
+TRUNCATE=99900
+
